testing the jar with the javaio patchover